testdata/e2e/examples/namespace-modifiers/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespace-modifiers
spec:
  namespaceModifiers: 
  - label:
      foo: bar
  - merge:
      metadata:
        name: foo
  steps:
  - try:
    - assert:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: foo
            labels:
              foo: bar
